<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BITRen App</string>
    <string name="version">1.2</string>
    <string name="channel">default</string>
    <string name="platform">android</string>
    <string name="user_agent">BITRenApp</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="ServerError">服务器错误</string>
    <string name="DownloadError">下载数据失败</string>
    <string name="HttpError">网络连接失败</string>
    <string name="JsonError">数据错误</string>
    <string name="UnknownError">未知错误</string>
    <string name="ExitApp">退出程序？</string>
    <string name="FavoriteContact_DisplayName">显示名称</string>
    <string name="FavoriteContact_RemoveConfirm">移除该条目？</string>
    <string name="FavoriteContact_RemoveFavorite">从常用电话移除</string>
    <string name="FavoriteContact_ChangeName">修改显示名称</string>
    <string name="FavoriteContact_HasAdd">已添加</string>
    <string name="FavoriteContact_AddSucceed">添加成功</string>
    <string name="FavoriteContact_AddFailed">添加失败</string>
    <string name="Feedback_Title">信息反馈</string>
    <string name="Feedback_LastHint">请在这里留下您的联系方式，以便我们对您提出信息进行核实，谢谢！</string>
    <string name="Feedback_Type">类型：</string>
    <string name="Feedback_Modifiy">修改</string>
    <string name="Feedback_Add">添加</string>
    <string name="Feedback_Delete">删除</string>
    <string name="Contact_Title">联系电话</string>
    <string name="Contact_SendEmail">发送邮件</string>
    <string name="Contact_DailPhone">拨打电话</string>
    <string name="Contact_AddFavorite">添加到常用电话</string>
    <string name="Contact_AddToContactList">添加到通讯录</string>
    <string name="Contact_SendByMessage">短信发送联系人</string>
    <string name="Contact_FixInfomation">提交信息更正</string>
    <string name="Contact_Email">邮箱：</string>
    <string name="Contact_Name">名称：</string>
    <string name="Contact_Location">地点：</string>
    <string name="Contact_Comment">备注：</string>
    <string name="Contact_Phone">电话：</string>
    <string name="Contact_QueryData">正在获取更新信息</string>
    <string name="Contact_DownloadData">正在下载数据</string>
    <string name="Contact_UpdateData">正在更新联系人数据</string>
    <string name="Contact_UpdateDataSucceed">更新联系人数据成功</string>
    <string name="Contact_NoNeedUpdate">您的数据已经是最新版</string>
    <string name="Contact_DialPhoneNumber">拨号：%1$s？</string>
    <string name="App_CheckingUpdate">正在检查更新</string>
    <string name="App_NoNeedUpdate">您的软件已经是最新版</string>
    <string name="Menu_AppUpdate">软件更新</string>
    <string name="Menu_Update">数据更新</string>
    <string name="Menu_Favorite">常用电话</string>
    <string name="Menu_About">关于我们</string>
    <string name="Menu_Exit">退出程序</string>
    <string name="MorePressExit">再按一次退出程序</string>
    <string name="About_Title">关于我们</string>
    <string name="About_Version">版本：Version</string>
    <string name="About_FeedbackHint">欢迎提出您宝贵的意见。如有必要请留下您的联系邮箱，以便我们对您提出的意见给予回复，谢谢！</string>
    <string name="About_CommitFeedback">提交反馈</string>
    <string name="About_NoInput">您还没有输入反馈意见</string>
    <string name="About_Copyright">Copyright © 2003~2012 www.bitren.com</string>
    <string name="About_DoUploadFeedback">正在提交反馈</string>
    <string name="About_UploadFeedbackSucceed">成功提交反馈，感谢您对我们的支持！</string>
    
</resources>