<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/relativeLayout_Title"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/textView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/About_Title"
            android:textColor="@color/title_text"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imageView_Back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/view_bg_selector"
            android:scaleType="center"
            android:src="@drawable/button_back" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView_TitleDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/relativeLayout_Title"
        android:background="@color/title_divider" />

    <RelativeLayout
        android:id="@+id/relativeLayout_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_TitleDivider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <ImageView
            android:id="@+id/imageView_Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/imageView_Logo"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView_LogoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/normal_text"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView_Version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView_LogoName"
                android:layout_marginTop="2dp"
                android:text="@string/About_Version"
                android:textColor="@color/normal_text"
                android:textSize="16dp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_Copyright"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/About_Copyright"
        android:textSize="10dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView_Submit"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/About_CommitFeedback"
        android:textColor="@color/normal_text"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/imageView_DividerLine"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@id/textView_Submit"
        android:background="@color/divider_line" />

    <EditText
        android:id="@+id/editText_InputFeedbackField"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/imageView_DividerLine"
        android:layout_below="@id/relativeLayout_Logo"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_bg"
        android:gravity="left"
        android:hint="@string/About_FeedbackHint"
        android:padding="10dp"
        android:textColor="@color/normal_text"
        android:textSize="16dp" />

</RelativeLayout>